--- a/public/styles.css
+++ b/public/styles.css
@@ -1,1 +1,560 @@
-html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}a{background-color:transparent}strong{font-weight:bolder}button,input{font-family:inherit;font-size:100%;line-height:1.15;margin:0;overflow:visible}button{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}legend{color:inherit;display:table;max-width:100%;white-space:normal}[type=checkbox],[type=radio],legend{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}[hidden]{display:none}html{box-sizing:border-box;font-family:sans-serif}*,:after,:before{box-sizing:inherit}h1,p{margin:0}button{background:transparent;padding:0}button:focus{outline:1px dotted;outline:5px auto -webkit-focus-ring-color}html{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;line-height:1.5}*,:after,:before{border:0 solid #e2e8f0}input::-webkit-input-placeholder{color:#a0aec0}input::-moz-placeholder{color:#a0aec0}input:-ms-input-placeholder{color:#a0aec0}input::-ms-input-placeholder{color:#a0aec0}input::placeholder{color:#a0aec0}[role=button],button{cursor:pointer}h1{font-size:inherit;font-weight:inherit}a{color:inherit;text-decoration:inherit}button,input{padding:0;line-height:inherit;color:inherit}canvas{display:block;vertical-align:middle}.rounded{border-radius:.25rem}.border-solid{border-style:solid}.flex{display:-webkit-box;display:flex}.flex-col{-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-direction:column}.items-center{-webkit-box-align:center;align-items:center}.justify-center{-webkit-box-pack:center;justify-content:center}.justify-between{-webkit-box-pack:justify;justify-content:space-between}.font-raleway{font-family:Raleway,sans-serif}.font-light{font-weight:300}.font-medium{font-weight:500}.font-semibold{font-weight:600}.font-bold{font-weight:700}.h-5{height:1.25rem}.h-16{height:4rem}.h-48{height:12rem}.h-screen{height:100vh}.leading-tight{line-height:1.25}.m-auto{margin:auto}.mb-1{margin-bottom:.25rem}.mt-2{margin-top:.5rem}.mr-2{margin-right:.5rem}.mb-2{margin-bottom:.5rem}.mb-4{margin-bottom:1rem}.mb-6{margin-bottom:1.5rem}.mb-10{margin-bottom:2.5rem}.mb-12{margin-bottom:3rem}.mb-20{margin-bottom:5rem}.mb-24{margin-bottom:6rem}.-mt-8{margin-top:-2rem}.max-w-xl{max-width:36rem}.focus\:outline-none:focus{outline:0}.overflow-scroll{overflow:scroll}.p-2{padding:.5rem}.p-3{padding:.75rem}.p-4{padding:1rem}.p-5{padding:1.25rem}.fixed{position:fixed}.top-0{top:0}.left-0{left:0}.shadow-md{box-shadow:0 4px 6px -1px rgba(0,0,0,.1),0 2px 4px -1px rgba(0,0,0,.06)}.focus\:shadow-outline:focus{box-shadow:0 0 0 3px rgba(66,153,225,.5)}.text-left{text-align:left}.text-center{text-align:center}.text-sm{font-size:.875rem}.text-xl{font-size:1.25rem}.text-4xl{font-size:2.25rem}.capitalize{text-transform:capitalize}.w-5{width:1.25rem}.w-1\/3{width:33.333333%}.w-2\/3{width:66.666667%}.w-full{width:100%}.form-input{-webkit-appearance:none;-moz-appearance:none;appearance:none;background-color:#fff;border-color:#e2e8f0;border-width:1px;border-radius:.25rem;padding:.5rem .75rem;font-size:1rem;line-height:1.5}.form-input::-webkit-input-placeholder{color:#a0aec0;opacity:1}.form-input::-moz-placeholder{color:#a0aec0;opacity:1}.form-input:-ms-input-placeholder{color:#a0aec0;opacity:1}.form-input::-ms-input-placeholder{color:#a0aec0;opacity:1}.form-input::placeholder{color:#a0aec0;opacity:1}.form-input:focus{outline:none;box-shadow:0 0 0 3px rgba(66,153,225,.5);border-color:#63b3ed}.form-radio{-webkit-appearance:none;-moz-appearance:none;appearance:none;-webkit-print-color-adjust:exact;color-adjust:exact;display:inline-block;vertical-align:middle;background-origin:border-box;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;flex-shrink:0;border-radius:100%;height:1em;width:1em;color:#4299e1;background-color:#fff;border-color:#e2e8f0;border-width:1px}.form-radio:checked{background-image:url("data:image/svg+xml;charset=utf-8,%3Csvg fill='%2300c6b3' viewBox='0 0 16 16' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='8' cy='8' r='5'/%3E%3C/svg%3E");border-color:transparent;background-color:currentColor;background-size:100% 100%;background-position:50%;background-repeat:no-repeat}@media not print{.form-radio::-ms-check{border-width:1px;color:transparent;background:inherit;border-color:inherit;border-radius:inherit}}.form-radio:focus{outline:none;box-shadow:0 0 0 3px rgba(66,153,225,.5);border-color:#63b3ed}.text-white-us{color:#fafafa}.text-light-gray-us{color:#aca9bb}.text-gray-us{color:#6e7378}.text-cyan-us{color:#00c6b3}.text-black-us{color:#1f2327}.bg-white-us{background-color:#fafafa}.bg-cyan-us-alpha{background-color:rgba(0,198,179,.05)}.bg-blue-us{background-color:rgba(47,66,82,.5)}.bg-black-us{background-color:#1f2327}.border-1{border-width:1px}.border-light-gray-us{border-color:#aca9bb}.border-cyan-us{border-color:rgba(0,198,179,.75)}.border-blue-us{border-color:#2f4252}.font-montserrat{font-family:Montserrat,sans-serif}.opacity-70{opacity:.7}.transition-ease-02{-webkit-transition:all .24s ease;transition:all .24s ease}.form-input-title{display:block;font-family:Raleway,sans-serif;color:#fafafa;font-size:1rem;font-weight:600;margin-bottom:.5rem}.form-payment-type{margin-left:.5rem;font-family:Raleway,sans-serif}.student-info-input{box-shadow:0 1px 3px 0 rgba(0,0,0,.1),0 1px 2px 0 rgba(0,0,0,.06);-webkit-appearance:none;-moz-appearance:none;appearance:none;border-width:1px;border-radius:.25rem;width:100%;padding:.5rem .75rem;color:#6e7378;line-height:1.25}.font-payment-summary{font-weight:300;padding-left:.5rem}.font-payment-summary,.text-summary-details{color:#fafafa;font-family:Work Sans,sans-serif}.text-summary-details{font-size:1.25rem;display:-webkit-box;display:flex;-webkit-box-pack:justify;justify-content:space-between}html{scroll-behavior:smooth}.cancel-button,.submit-button{font-family:Montserrat,sans-serif;font-weight:600;display:inline-block;padding:10px;font-size:1.125rem}.cancel-button:hover,.submit-button:hover{-webkit-transition:all .3s ease;transition:all .3s ease}.submit-button{color:#363636;background-color:#00c6b3;border:1px solid #00c6b3}.cancel-button{color:#d6eadf;background-color:transparent}.submit-button:hover{background-color:#00e6cf}.cancel-button:hover{background-color:rgba(214,234,223,.15);border:1px solid rgba(214,234,223,.4)}.blink{color:#00c6b3;font-weight:400;-webkit-animation:blinker .95s linear infinite;animation:blinker .95s linear infinite}@-webkit-keyframes blinker{50%{opacity:0}}@keyframes blinker{50%{opacity:0}}@media (max-width:415px){.sm\:flex{display:-webkit-box;display:flex}.sm\:flex-col{-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-direction:column}.sm\:h-40{height:10rem}.sm\:mb-3{margin-bottom:.75rem}.sm\:mb-6{margin-bottom:1.5rem}.sm\:mb-12{margin-bottom:3rem}.sm\:pr-4{padding-right:1rem}.sm\:text-left{text-align:left}.sm\:text-right{text-align:right}.sm\:text-3xl{font-size:1.875rem}}
+html {
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+}
+body {
+  margin: 0;
+}
+main {
+  display: block;
+}
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+a {
+  background-color: transparent;
+}
+strong {
+  font-weight: bolder;
+}
+button,
+input {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+  overflow: visible;
+}
+button {
+  text-transform: none;
+}
+[type='button'],
+[type='reset'],
+[type='submit'],
+button {
+  -webkit-appearance: button;
+}
+[type='button']::-moz-focus-inner,
+[type='reset']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner,
+button::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+[type='button']:-moz-focusring,
+[type='reset']:-moz-focusring,
+[type='submit']:-moz-focusring,
+button:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+legend {
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  white-space: normal;
+}
+[type='checkbox'],
+[type='radio'],
+legend {
+  box-sizing: border-box;
+  padding: 0;
+}
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
+  height: auto;
+}
+[type='search'] {
+  -webkit-appearance: textfield;
+  outline-offset: -2px;
+}
+[type='search']::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit;
+}
+[hidden] {
+  display: none;
+}
+html {
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
+*,
+:after,
+:before {
+  box-sizing: inherit;
+}
+h1,
+p {
+  margin: 0;
+}
+button {
+  background: transparent;
+  padding: 0;
+}
+button:focus {
+  outline: 1px dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+}
+html {
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  line-height: 1.5;
+}
+*,
+:after,
+:before {
+  border: 0 solid #e2e8f0;
+}
+input::-webkit-input-placeholder {
+  color: #a0aec0;
+}
+input::-moz-placeholder {
+  color: #a0aec0;
+}
+input:-ms-input-placeholder {
+  color: #a0aec0;
+}
+input::-ms-input-placeholder {
+  color: #a0aec0;
+}
+input::placeholder {
+  color: #a0aec0;
+}
+[role='button'],
+button {
+  cursor: pointer;
+}
+h1 {
+  font-size: inherit;
+  font-weight: inherit;
+}
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
+button,
+input {
+  padding: 0;
+  line-height: inherit;
+  color: inherit;
+}
+canvas {
+  display: block;
+  vertical-align: middle;
+}
+.rounded {
+  border-radius: 0.25rem;
+}
+.border-solid {
+  border-style: solid;
+}
+.flex {
+  display: -webkit-box;
+  display: flex;
+}
+.flex-col {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  flex-direction: column;
+}
+.items-center {
+  -webkit-box-align: center;
+  align-items: center;
+}
+.justify-center {
+  -webkit-box-pack: center;
+  justify-content: center;
+}
+.justify-between {
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+}
+.font-raleway {
+  font-family: Raleway, sans-serif;
+}
+.font-light {
+  font-weight: 300;
+}
+.font-medium {
+  font-weight: 500;
+}
+.font-semibold {
+  font-weight: 600;
+}
+.font-bold {
+  font-weight: 700;
+}
+.h-5 {
+  height: 1.25rem;
+}
+.h-16 {
+  height: 4rem;
+}
+.h-48 {
+  height: 12rem;
+}
+.h-screen {
+  height: 100vh;
+}
+.leading-tight {
+  line-height: 1.25;
+}
+.m-auto {
+  margin: auto;
+}
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+.mt-2 {
+  margin-top: 0.5rem;
+}
+.mr-2 {
+  margin-right: 0.5rem;
+}
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+.mb-4 {
+  margin-bottom: 1rem;
+}
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+.mb-12 {
+  margin-bottom: 3rem;
+}
+.mb-20 {
+  margin-bottom: 5rem;
+}
+.mb-24 {
+  margin-bottom: 6rem;
+}
+.-mt-8 {
+  margin-top: -2rem;
+}
+.max-w-xl {
+  max-width: 36rem;
+}
+.focus\:outline-none:focus {
+  outline: 0;
+}
+.overflow-scroll {
+  overflow: scroll;
+}
+.p-2 {
+  padding: 0.5rem;
+}
+.p-3 {
+  padding: 0.75rem;
+}
+.p-4 {
+  padding: 1rem;
+}
+.p-5 {
+  padding: 1.25rem;
+}
+.fixed {
+  position: fixed;
+}
+.top-0 {
+  top: 0;
+}
+.left-0 {
+  left: 0;
+}
+.shadow-md {
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+.focus\:shadow-outline:focus {
+  box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5);
+}
+.text-left {
+  text-align: left;
+}
+.text-center {
+  text-align: center;
+}
+.text-sm {
+  font-size: 0.875rem;
+}
+.text-xl {
+  font-size: 1.25rem;
+}
+.text-4xl {
+  font-size: 2.25rem;
+}
+.capitalize {
+  text-transform: capitalize;
+}
+.w-5 {
+  width: 1.25rem;
+}
+.w-1\/3 {
+  width: 33.333333%;
+}
+.w-2\/3 {
+  width: 66.666667%;
+}
+.w-full {
+  width: 100%;
+}
+.form-input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: #fff;
+  border-color: #e2e8f0;
+  border-width: 1px;
+  border-radius: 0.25rem;
+  padding: 0.5rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+}
+.form-input::-webkit-input-placeholder {
+  color: #a0aec0;
+  opacity: 1;
+}
+.form-input::-moz-placeholder {
+  color: #a0aec0;
+  opacity: 1;
+}
+.form-input:-ms-input-placeholder {
+  color: #a0aec0;
+  opacity: 1;
+}
+.form-input::-ms-input-placeholder {
+  color: #a0aec0;
+  opacity: 1;
+}
+.form-input::placeholder {
+  color: #a0aec0;
+  opacity: 1;
+}
+.form-input:focus {
+  outline: none;
+  box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5);
+  border-color: #63b3ed;
+}
+.form-radio {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  -webkit-print-color-adjust: exact;
+  color-adjust: exact;
+  display: inline-block;
+  vertical-align: middle;
+  background-origin: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  flex-shrink: 0;
+  border-radius: 100%;
+  height: 1em;
+  width: 1em;
+  color: #4299e1;
+  background-color: #fff;
+  border-color: #e2e8f0;
+  border-width: 1px;
+}
+.form-radio:checked {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg fill='%2300c6b3' viewBox='0 0 16 16' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='8' cy='8' r='5'/%3E%3C/svg%3E");
+  border-color: transparent;
+  background-color: currentColor;
+  background-size: 100% 100%;
+  background-position: 50%;
+  background-repeat: no-repeat;
+}
+@media not print {
+  .form-radio::-ms-check {
+    border-width: 1px;
+    color: transparent;
+    background: inherit;
+    border-color: inherit;
+    border-radius: inherit;
+  }
+}
+.form-radio:focus {
+  outline: none;
+  box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5);
+  border-color: #63b3ed;
+}
+.text-white-us {
+  color: #fafafa;
+}
+.text-light-gray-us {
+  color: #aca9bb;
+}
+.text-gray-us {
+  color: #6e7378;
+}
+.text-cyan-us {
+  color: #00c6b3;
+}
+.text-black-us {
+  color: #1f2327;
+}
+.bg-white-us {
+  background-color: #fafafa;
+}
+.bg-cyan-us-alpha {
+  background-color: rgba(0, 198, 179, 0.05);
+}
+.bg-blue-us {
+  background-color: rgba(47, 66, 82, 0.5);
+}
+.bg-black-us {
+  background-color: #1f2327;
+}
+.border-1 {
+  border-width: 1px;
+}
+.border-light-gray-us {
+  border-color: #aca9bb;
+}
+.border-cyan-us {
+  border-color: rgba(0, 198, 179, 0.75);
+}
+.border-blue-us {
+  border-color: #2f4252;
+}
+.ntserrat {
+  font-family: Montserrat, sans-serif;
+}
+.opacity-70 {
+  opacity: 0.7;
+}
+.transition-ease-02 {
+  -webkit-transition: all 0.24s ease;
+  transition: all 0.24s ease;
+}
+.form-input-title {
+  display: block;
+  font-family: Raleway, sans-serif;
+  color: #fafafa;
+  font-size: 1rem;
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+}
+.form-payment-type {
+  margin-left: 0.5rem;
+  font-family: Raleway, sans-serif;
+}
+.student-info-input {
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-width: 1px;
+  border-radius: 0.25rem;
+  width: 100%;
+  padding: 0.5rem 0.75rem;
+  color: #6e7378;
+  line-height: 1.25;
+}
+.font-payment-summary {
+  font-weight: 300;
+  padding-left: 0.5rem;
+}
+.font-payment-summary,
+.text-summary-details {
+  color: #fafafa;
+  font-family: Work Sans, sans-serif;
+}
+.text-summary-details {
+  font-size: 1.25rem;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+}
+html {
+  scroll-behavior: smooth;
+}
+.cancel-button,
+.submit-button {
+  font-family: Montserrat, sans-serif;
+  font-weight: 600;
+  display: inline-block;
+  padding: 10px;
+  font-size: 1.125rem;
+}
+.cancel-button:hover,
+.submit-button:hover {
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.submit-button {
+  color: #363636;
+  background-color: #00c6b3;
+  border: 1px solid #00c6b3;
+}
+.cancel-button {
+  color: #d6eadf;
+  background-color: transparent;
+}
+.submit-button:hover {
+  background-color: #00e6cf;
+}
+.cancel-button:hover {
+  background-color: rgba(214, 234, 223, 0.15);
+  border: 1px solid rgba(214, 234, 223, 0.4);
+}
+.blink {
+  color: #00c6b3;
+  font-weight: 400;
+  -webkit-animation: blinker 0.95s linear infinite;
+  animation: blinker 0.95s linear infinite;
+}
+@-webkit-keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
+@media (max-width: 415px) {
+  .sm\:flex {
+    display: -webkit-box;
+    display: flex;
+  }
+  .sm\:flex-col {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+  }
+  .sm\:h-40 {
+    height: 10rem;
+  }
+  .sm\:mb-3 {
+    margin-bottom: 0.75rem;
+  }
+  .sm\:mb-6 {
+    margin-bottom: 1.5rem;
+  }
+  .sm\:mb-12 {
+    margin-bottom: 3rem;
+  }
+  .sm\:pr-4 {
+    padding-right: 1rem;
+  }
+  .sm\:text-left {
+    text-align: left;
+  }
+  .sm\:text-right {
+    text-align: right;
+  }
+  .sm\:text-3xl {
+    font-size: 1.875rem;
+  }
+}
