--- a/public/utilities.css
+++ b/public/utilities.css
@@ -63,6 +63,10 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+.font-raleway {
+  font-family: 'Raleway', sans-serif;
+}
+
 /* opacity */
 .opacity-70 {
   opacity: 0.7;
