--- a/public/components.css
+++ b/public/components.css
@@ -21,3 +21,15 @@
 .text-summary-details {
   @apply text-white-us font-worksans flex justify-between;
 }
+
+@screen sm {
+  .emoji {
+    @apply w-11pc;
+  }
+}
+
+@screen md {
+  .emoji {
+    @apply w-6pc;
+  }
+}
